--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loterias Brasil - Resultados em Tempo Real</title>
+    <title>Loterias Brasil</title>
 
     <!-- Squeleton CSS -->
     <link rel="stylesheet" href="https://cdn.hiperwp.com.br/squeleton.v4.min.css">
